# JSON-Cocktail-Parser-C

./: README.md
DAD-C/: CMakeLists.txt
DAD-C/include/: generic.h  list.h
DAD-C/src/: main.c
DAD-C/src/list/: list.c
Exercises/include/: Exercises.h
Exercises/src/: exercises.c  main.c
JSONParser/: CMakeLists.txt
JSONParser/include/: Parser.h
JSONParser/src/: main.c  parser.c  queue.c
NREL/: CMakeLists.txt
NREL/include/: nrel.h
NREL/src/: main.c  nrel.c  queue.c
